--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   firebase_core: ^1.4.0
   provider: ^5.0.0
+  firebase_auth: ^3.0.1
 
 dev_dependencies:
   flutter_test:
