--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_core: ^1.4.0
   provider: ^5.0.0
   firebase_auth: ^3.0.1
+  image_picker: ^0.8.2
 
 dev_dependencies:
   flutter_test:
