--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   provider: ^5.0.0
   firebase_auth: ^3.0.1
   image_picker: ^0.8.2
+  cloud_firestore: ^2.4.0
+  firebase_storage: ^10.0.1
 
 dev_dependencies:
   flutter_test:
